# duma

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
src/: bar.rs  core.rs  download.rs  http.rs  lib.rs  main.rs  rftp.rs  rgetftp.rs  utils.rs
tests/: client.rs  foo.txt  integration.rs  server.rs  test.rs
