[package]
name = "duma"
version = "0.1.1"
authors = ["Matt Gathu <mattgathu@gmail.com>"]
description = "A minimal file downloader"
documentation = "https://github.com/mattgathu/duma"
homepage = "https://github.com/mattgathu/duma"
repository = "https://github.com/mattgathu/duma"
readme = "README.md"
keywords = ["http", "client", "cli", "file", "download"]
categories = ["web-programming::http-client", "command-line-utilities", "network-programming"]
license = "MIT"
edition = "2018"

[dependencies]
indicatif = "0.11.0"
console = "0.7.5"
clap = "2.31.2"
ftp = "3.0.1"
threadpool = "1.7.1"
failure = { version = "0.1.5", features = [] }
mrq = "0.1.0"
url = "1.7.2"

[dev-dependencies]
assert_cmd = "0.11"
tiny_http = "0.6.2"
assert_fs = "0.11"
predicates = "1.0"
